--- a/Quizzes/017/017.md
+++ b/Quizzes/017/017.md
@@ -1,3 +1,4 @@
+## Code
 ```.py
 def averageLenght(words):
     n = 0
@@ -15,3 +16,7 @@ print(test2)
 print(test3)
 print(test4)
 ```
+## Result
+!()[17.png]
+## Flow chart
+!()[17fc.png]
