--- a/Quizzes/018/018.md
+++ b/Quizzes/018/018.md
@@ -1,3 +1,4 @@
+## Code
 ```.py
 def numberMatches(length, speed):
     l = length*100
@@ -16,3 +17,7 @@ print(f"{test2} matches")
 print(f"{test3} matches")
 print(f"{test4} matches")
 ```
+## Result
+![](18.png)
+## Flow chart
+![](18fc.png)
